--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
       I've almost finished my first week at Epicodus. Here are some of the things I've learned so far:
     </p>
       </div>
-  <div class="well">
+  <div class="row">
+    <div class="col-xs-4">
+      <div class="well">
     <h2>Command Line</h2>
     <ul>
       <li>Navigating my documents through the command line.</li>
@@ -20,9 +22,11 @@
       <li>Moving and deleting files and folders through the command line.</li>
       <li>Retrieving my current location from the command line.</li>
     </ul>
-  </div>
-  <div class="panel panel-info">
-    <div class="panel-heading">
+      </div>
+    </div>
+  <div class="col-xs-4">
+    <div class="panel panel-info">
+      <div class="panel-heading">
       <h2 class="panel-title">Git and GitHub</h2>
     </div>
     <div class="panel-body">
@@ -35,8 +39,10 @@
         <li>Cloning down a project from GitHub to my local machine.</li>
         <li class="bg-success">Publishing a website on GitHub pages.</li>
       </ul>
+      </div>
     </div>
   </div>
+  <div class="col-xs-4">
     <h2>HTML</h2>
     <ul>
       <li>Using HTML tags to create websites.</li>
@@ -46,6 +52,10 @@
       <li>Using both spans and divs.</li>
       <li>Adding classes and ID's to style HTML with CSS.</li>
     </ul>
+  </div>
+  </div>
+    <div class="row">
+      <div class="col-xs-4">
     <h2>CSS</h2>
     <ul>
       <li>Creating a stylesheet.</li>
@@ -57,6 +67,8 @@
       <li>The importance of responsive design.</li>
       <li>How to use media queries to dynamically change the appearance of a site based on the user's viewport.</li>
     </ul>
+      </div>
+      <div class="col-xs-4">
     <h2>Bootstrap</h2>
     <ul>
       <li>What front-end frameworks do.</li>
@@ -64,12 +76,16 @@
       <li class="bg-success">Adding Bootstrap styles to a website.</li>
       <li>Navigating Bootstrap documentation.</li>
       <li>Creating websites with Bootstrap.</li>
+    </ul>
+      </div>
+      <div class="col-xs-4">
     <h2>Partnering</h2>
     <blockquote class="bg-info">
       <p>"It's been really good working with you!"</p>
         <footer>My partner the first day</footer>
-    </blockquote>
-    </ul>
+          </blockquote>
+        </div>
+      </div>
     </div>
   </body>
 </html>
